# webgpurs

./: Cargo.toml  README.md  bunnyFloat.xyz
resources/: LICENSE
src/: cube_scene_renderer.rs  main.rs  process_visibility.wgsl
src/dvs/: deferred_voxel_shading.rs  mod.rs  voxelization.rs
src/interface/: mod.rs  render_device.rs  scene_render.rs
src/pass/: black_board.rs  mod.rs  render_pass.rs
src/point_cloud/: e57_reader.rs  mod.rs  point_cloud.rs  point_cloud_renderer.rs
src/render_client/: camera.rs  camera_controller.rs  mod.rs  primitive_buffer.rs  render_device.rs  surface_wrapper.rs  texture.rs
src/samples/: cube_scene_renderer.rs  mod.rs
src/scene/: mod.rs  obj_loader.rs  scene_object.rs  scene_object_loader.rs
src/shader/: object.wgsl  render_point_cs.wgsl  voxel_axis_projection.wgsl  voxelization.wgsl
src/shader/glsl/: voxel_axis_projection.glsl
src/shader/utils/: f64.wgsl
src/shader_pipeline/: shader.rs
src/utils/: counter.rs  image_util.rs  logger.rs  math_util.rs  mod.rs  wasm_util.rs
