[package]
name = "webgpurs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["graphics"]
repository = "https://github.com/snowapril/webgpurs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.18.0"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.10"
pollster = "0.3"
winit = {version = "0.29", features = ["rwh_05"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
wasm-bindgen-futures = "0.4.38"
web-sys = "0.3.64"