[package]
name = "webgpurs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["graphics"]
repository = "https://github.com/snowapril/webgpurs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.18.0"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.10"
pollster = "0.3"
winit = {version = "0.29", features = ["rwh_05"]}
glam = "0.24.2"
cfg-if = "1"
log = "0.4"
png = "0.17.10"
web-time = "0.2.3"
glium = "0.26"
obj-rs = { version = "0.6", features = ["glium"] }
e57 = "0.9.0"
anyhow = "1"
ryu = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.38"
fern = "0.6"
js-sys = "0.3.65"
web-sys = { version = "0.3.64", features = ["Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "Response",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d"
] }